[gd_scene load_steps=36 format=3 uid="uid://c0d6yp7fldlp6"]

[ext_resource type="Texture2D" uid="uid://dl0si4q1ky7ya" path="res://assets/gui/script/script_base.png" id="1_356ca"]
[ext_resource type="Script" path="res://ui/scriptv2/script_menu.gd" id="1_dsifa"]
[ext_resource type="Script" path="res://ui/scriptv2/tab.gd" id="2_2daos"]
[ext_resource type="Theme" uid="uid://beq0588k2fchk" path="res://ui/database/database.tres" id="3_6j4tl"]
[ext_resource type="Texture2D" uid="uid://bmkgp4oghvpxi" path="res://assets/gui/script/file1_tab_active.png" id="5_htkfu"]
[ext_resource type="Texture2D" uid="uid://8es1cb0cyt85" path="res://assets/gui/script/file1_tab_active_hover.png" id="6_u4rys"]
[ext_resource type="Texture2D" uid="uid://xfwr2ojblgon" path="res://assets/gui/script/file1_tab_inactive.png" id="7_47f4e"]
[ext_resource type="Texture2D" uid="uid://bbex8j0wbo0lb" path="res://assets/gui/script/clear.png" id="8_3atge"]
[ext_resource type="PackedScene" uid="uid://byonngrgtbxr7" path="res://ui/x_button.tscn" id="8_45idl"]
[ext_resource type="Texture2D" uid="uid://c1mh481xpuooc" path="res://assets/gui/script/file1_tab_inactive_hover.png" id="8_yhyuj"]
[ext_resource type="Texture2D" uid="uid://3jcwm2b12n1e" path="res://assets/gui/script/file2_tab_active.png" id="9_4mog8"]
[ext_resource type="Texture2D" uid="uid://dd2qlextwpbp1" path="res://assets/gui/script/if_drawer.png" id="9_ejr7q"]
[ext_resource type="Texture2D" uid="uid://hll5u1aj8n0e" path="res://assets/gui/script/clear_clicked.png" id="9_h6ssq"]
[ext_resource type="Texture2D" uid="uid://5pbgn7fbq0vg" path="res://assets/gui/script/clear_hover.png" id="10_1rl4x"]
[ext_resource type="Texture2D" uid="uid://g6ec7elcqd1c" path="res://assets/gui/script/file2_tab_active_hover.png" id="10_vj2pr"]
[ext_resource type="Texture2D" uid="uid://d0cuy015kcgyq" path="res://assets/gui/script/to_drawer.png" id="10_wvcos"]
[ext_resource type="Texture2D" uid="uid://by7dqeqkd0th5" path="res://assets/gui/script/do_drawer.png" id="11_0hkhl"]
[ext_resource type="Texture2D" uid="uid://bg3ukyh4txx0o" path="res://assets/gui/script/file2_tab_inactive.png" id="11_ynigc"]
[ext_resource type="Texture2D" uid="uid://rb63rux5hwbl" path="res://assets/gui/script/if_tab_active.png" id="12_k4qvj"]
[ext_resource type="Texture2D" uid="uid://dh7oqgpg33ojt" path="res://assets/gui/script/file2_tab_inactive_hover.png" id="12_tryx0"]
[ext_resource type="Texture2D" uid="uid://dfbkil0l2hddn" path="res://assets/gui/script/if_tab_active_hover.png" id="13_b7410"]
[ext_resource type="Texture2D" uid="uid://cbuf64k8rmq2h" path="res://assets/gui/script/file3_tab_active.png" id="13_rdvle"]
[ext_resource type="Texture2D" uid="uid://dqo4oc6rndsjk" path="res://assets/gui/script/if_tab_inactive.png" id="14_5pbym"]
[ext_resource type="Texture2D" uid="uid://d2shaeti5q2jj" path="res://assets/gui/script/file3_tab_active_hover.png" id="14_enilk"]
[ext_resource type="Texture2D" uid="uid://drx33f76q6vyo" path="res://assets/gui/script/if_tab_inactive_hover.png" id="15_1vd4c"]
[ext_resource type="Texture2D" uid="uid://brhg3hxnrjql0" path="res://assets/gui/script/file3_tab_inactive.png" id="15_wxog3"]
[ext_resource type="Texture2D" uid="uid://b126hqt6rhog" path="res://assets/gui/script/do_tab_active.png" id="16_51xmr"]
[ext_resource type="Texture2D" uid="uid://dkwbthreyq3om" path="res://assets/gui/script/file3_tab_inactive_hover.png" id="16_dk14e"]
[ext_resource type="Texture2D" uid="uid://boq8c5wa1l0pk" path="res://assets/gui/script/do_tab_active_hover.png" id="17_6emm1"]
[ext_resource type="Texture2D" uid="uid://ut830nxq2ya1" path="res://assets/gui/script/do_tab_inactive.png" id="18_qpwv0"]
[ext_resource type="Texture2D" uid="uid://besr64i0ltfh3" path="res://assets/gui/script/do_tab_inactive_hover.png" id="19_e8f5r"]
[ext_resource type="Texture2D" uid="uid://dsxioifilcuhi" path="res://assets/gui/script/to_tab_active.png" id="20_b7dge"]
[ext_resource type="Texture2D" uid="uid://m6el3fvvojlw" path="res://assets/gui/script/to_tab_active_hover.png" id="21_s8u0c"]
[ext_resource type="Texture2D" uid="uid://dcx2ma73ec0if" path="res://assets/gui/script/to_tab_inactive.png" id="22_yvqja"]
[ext_resource type="Texture2D" uid="uid://duxhdhv0bp2j5" path="res://assets/gui/script/to_tab_inactive_hover.png" id="23_rwvli"]

[node name="ScriptInterface" type="Node2D"]
script = ExtResource("1_dsifa")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_356ca")
centered = false

[node name="Title" type="Label" parent="."]
offset_left = 5.0
offset_right = 113.0
offset_bottom = 14.0
text = "Magnetfrog's Script"

[node name="ScriptScroll" type="ScrollContainer" parent="."]
offset_left = 5.0
offset_top = 16.0
offset_right = 315.0
offset_bottom = 117.0
size_flags_horizontal = 3
theme = ExtResource("3_6j4tl")

[node name="Script" type="VBoxContainer" parent="ScriptScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FILLER" type="Button" parent="ScriptScroll/Script"]
custom_minimum_size = Vector2(120, 500)
layout_mode = 2
mouse_filter = 2

[node name="FileTabs" type="Node" parent="."]

[node name="FileTab1" type="Node2D" parent="FileTabs"]
position = Vector2(118, 3)
script = ExtResource("2_2daos")
texture_selected = ExtResource("5_htkfu")
texture_selected_hover = ExtResource("6_u4rys")
texture_unselected = ExtResource("7_47f4e")
texture_unselected_hover = ExtResource("8_yhyuj")

[node name="Button" type="TextureButton" parent="FileTabs/FileTab1"]
offset_right = 49.0
offset_bottom = 13.0
texture_normal = ExtResource("5_htkfu")

[node name="FileTab2" type="Node2D" parent="FileTabs"]
position = Vector2(166, 3)
script = ExtResource("2_2daos")
texture_selected = ExtResource("9_4mog8")
texture_selected_hover = ExtResource("10_vj2pr")
texture_unselected = ExtResource("11_ynigc")
texture_unselected_hover = ExtResource("12_tryx0")

[node name="Button" type="TextureButton" parent="FileTabs/FileTab2"]
offset_right = 49.0
offset_bottom = 13.0
mouse_filter = 1
texture_normal = ExtResource("11_ynigc")

[node name="FileTab3" type="Node2D" parent="FileTabs"]
position = Vector2(214, 3)
script = ExtResource("2_2daos")
texture_selected = ExtResource("13_rdvle")
texture_selected_hover = ExtResource("14_enilk")
texture_unselected = ExtResource("15_wxog3")
texture_unselected_hover = ExtResource("16_dk14e")

[node name="Button" type="TextureButton" parent="FileTabs/FileTab3"]
offset_right = 49.0
offset_bottom = 13.0
texture_normal = ExtResource("11_ynigc")

[node name="BlockDrawer" type="Node" parent="."]

[node name="Drawers" type="Node" parent="BlockDrawer"]

[node name="IfDrawer" type="Node2D" parent="BlockDrawer/Drawers"]

[node name="IfBackground" type="Sprite2D" parent="BlockDrawer/Drawers/IfDrawer"]
position = Vector2(10, 119)
texture = ExtResource("9_ejr7q")
centered = false

[node name="BlockScroll" type="ScrollContainer" parent="BlockDrawer/Drawers/IfDrawer"]
offset_left = 11.0
offset_top = 120.0
offset_right = 315.0
offset_bottom = 174.0
size_flags_horizontal = 3
theme = ExtResource("3_6j4tl")

[node name="Blocks" type="FlowContainer" parent="BlockDrawer/Drawers/IfDrawer/BlockScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="DoDrawer" type="Node2D" parent="BlockDrawer/Drawers"]

[node name="DoBackground" type="Sprite2D" parent="BlockDrawer/Drawers/DoDrawer"]
position = Vector2(10, 119)
texture = ExtResource("11_0hkhl")
centered = false

[node name="BlockScroll" type="ScrollContainer" parent="BlockDrawer/Drawers/DoDrawer"]
offset_left = 11.0
offset_top = 120.0
offset_right = 315.0
offset_bottom = 174.0
size_flags_horizontal = 3
theme = ExtResource("3_6j4tl")

[node name="Blocks" type="FlowContainer" parent="BlockDrawer/Drawers/DoDrawer/BlockScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="ToDrawer" type="Node2D" parent="BlockDrawer/Drawers"]

[node name="Background" type="Sprite2D" parent="BlockDrawer/Drawers/ToDrawer"]
position = Vector2(10, 119)
texture = ExtResource("10_wvcos")
centered = false

[node name="BlockScroll" type="ScrollContainer" parent="BlockDrawer/Drawers/ToDrawer"]
offset_left = 11.0
offset_top = 120.0
offset_right = 315.0
offset_bottom = 174.0
size_flags_horizontal = 3
theme = ExtResource("3_6j4tl")

[node name="Blocks" type="FlowContainer" parent="BlockDrawer/Drawers/ToDrawer/BlockScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0

[node name="Tabs" type="Node" parent="BlockDrawer"]

[node name="IfTab" type="Node2D" parent="BlockDrawer/Tabs"]
position = Vector2(118, 3)
script = ExtResource("2_2daos")
texture_selected = ExtResource("12_k4qvj")
texture_selected_hover = ExtResource("13_b7410")
texture_unselected = ExtResource("14_5pbym")
texture_unselected_hover = ExtResource("15_1vd4c")

[node name="Button" type="TextureButton" parent="BlockDrawer/Tabs/IfTab"]
offset_left = -115.0
offset_top = 117.0
offset_right = -108.0
offset_bottom = 135.0
mouse_filter = 1
texture_normal = ExtResource("12_k4qvj")
texture_hover = ExtResource("13_b7410")

[node name="DoTab" type="Node2D" parent="BlockDrawer/Tabs"]
position = Vector2(118, 3)
script = ExtResource("2_2daos")
texture_selected = ExtResource("16_51xmr")
texture_selected_hover = ExtResource("17_6emm1")
texture_unselected = ExtResource("18_qpwv0")
texture_unselected_hover = ExtResource("19_e8f5r")

[node name="Button" type="TextureButton" parent="BlockDrawer/Tabs/DoTab"]
offset_left = -115.0
offset_top = 135.0
offset_right = -108.0
offset_bottom = 153.0
mouse_filter = 1
texture_normal = ExtResource("16_51xmr")
texture_hover = ExtResource("17_6emm1")

[node name="ToTab" type="Node2D" parent="BlockDrawer/Tabs"]
position = Vector2(118, 3)
script = ExtResource("2_2daos")
texture_selected = ExtResource("20_b7dge")
texture_selected_hover = ExtResource("21_s8u0c")
texture_unselected = ExtResource("22_yvqja")
texture_unselected_hover = ExtResource("23_rwvli")

[node name="Button" type="TextureButton" parent="BlockDrawer/Tabs/ToTab"]
offset_left = -115.0
offset_top = 153.0
offset_right = -108.0
offset_bottom = 171.0
mouse_filter = 1
texture_normal = ExtResource("20_b7dge")
texture_hover = ExtResource("21_s8u0c")

[node name="ClearButton" type="TextureButton" parent="."]
offset_left = 267.0
offset_top = 4.0
offset_right = 300.0
offset_bottom = 15.0
texture_normal = ExtResource("8_3atge")
texture_pressed = ExtResource("9_h6ssq")
texture_hover = ExtResource("10_1rl4x")

[node name="XButton" parent="." instance=ExtResource("8_45idl")]

[connection signal="clicked" from="FileTabs/FileTab1" to="." method="_on_file_tab_1_clicked"]
[connection signal="clicked" from="FileTabs/FileTab2" to="." method="_on_file_tab_2_clicked"]
[connection signal="clicked" from="FileTabs/FileTab3" to="." method="_on_file_tab_3_clicked"]
[connection signal="clicked" from="BlockDrawer/Tabs/IfTab" to="." method="_on_if_tab_clicked"]
[connection signal="clicked" from="BlockDrawer/Tabs/DoTab" to="." method="_on_do_tab_clicked"]
[connection signal="clicked" from="BlockDrawer/Tabs/ToTab" to="." method="_on_to_tab_clicked"]
[connection signal="pressed" from="ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="XButton" to="." method="_on_x_button_pressed"]
